# coding-challenges

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
ai_context/: README.md  ai_commit_message.md  ai_positive_outcomes.md  ai_prompt_examples.md  code_generation.md  explanation_generation.md  infra_and_project_dev.md  leetcode_problem_mapping.md  mathematical_formatting.md  new_problem.md  problem_lookup.md  problem_status_prompt.md  rigorous_proofs.md  scripts_usage.md  tagging_and_readme.md  troubleshooting.md
challenges/: conftest.py  tags.md
challenges/best_time_to_buy_and_sell_stock/: README.md  solution.py
challenges/binary_tree_level_order_traversal/: README.md  solution.py
challenges/climbing_stairs/: README.md  solution.py
challenges/coin_change/: README.md  test_solution.py
challenges/container_with_most_water/: README.md
challenges/course_schedule/: README.md  test_solution.py
challenges/find_all_anagrams_in_a_string/: README.md
challenges/find_duplicate_number/: README.md  test_solution.py
challenges/find_first_unique_character/: README.md
challenges/find_median_from_data_stream/: README.md
challenges/find_minimum_in_rotated_sorted_array/: solution.py  test_solution.py
challenges/group_anagrams/: README.md  (+1 more)
docker/: Dockerfile
dotfiles/: .zshrc
problem_sources/: grokking_the_coding_interview_problem_tracker_combined.csv
scripts/: add_challenge.sh  audit_tags.py  problem_status.py  run_in_container.sh  wipe_solutions.py
(+304 files in other folders)
