[tool.poetry]
name = "coding_challenges"
version = "0.1.0"
description = "Practice Python coding challenges with best practices, Docker, and Emacs."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
flake8 = "*"
pre-commit = "^4.2.0"
isort = "^6.0.1"
pytest-watch = "^4.2.0"
docformatter = "^1.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 

[tool.black]
line-length = 80
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 80
extend-ignore = ["E23", "W503", "F41"]
exclude = [".git", "__pycache__", "build", "dist"] 